# Python3

./: .gitignore  .replit  Cinema tickets.py  Commisions.py  Currency converter.py  NFT.py  Parking.py  README.md  convert.kv  flight schedule (nested list and dictionary)  foo.py  lists to dictionary  main.py  prime_numbers.py  print reversed list  pyproject.toml  replit.nix
Flask project/: app.py  converter.css  converter.html  test.py
HackerRank/: 2D array.py  Capitalize first letter of a string.py  Counting items in dictionary and profit.py  Counting substrings (vowels and consonants).py  Designer doormat with string alignment.py  Inheritance.py  List rotation.py  Nearly_similar_rectangles.py  Painting with text alignment.py  Phonebook {dict}.py  Text alignment.py  factorial function.py  factorial function_recursion.py  itertools-product.py  print reversed list.py  second_lowest_score.py  string validators.py
Kivy project/: Convert.py  convert.kv  test.kv  test.py
MongoDB/: createDB.py  update_DB.py
NFT/: Binance.py  NFT.py
Other/: Count repeated characters in string.py  Lukas numbers (recursive).py  Tail recursion  Tail recursion.py  count items in list to dict.py  count items in list with strings.py  from JS to Python-Guinea_pig.txt  from JS to Python-NFS3.py  from JS to Python-school_register.py
Pandas/: my_script.py  translate_excel_columns.py
PyQt5 & Kivy/: Kivy window.py  PyQt5 first program.py
Python Fundamentals/: Array manipulations-working.py  Functions-Array_manipulation.py  Functions-Loading Bar.py  Functions-Odd_Even_from single_number.py  (+7 more)
(+133 files in other folders)
