[tool.poetry]
name = "python3-11"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kivy = "^2.0.0"
pyqt5 = "^5.15.2"
ajax = "^3.0.0"
flask = "^2.0.1"
kivymd = "^0.104.2"
kivymd-extensions = "^1.0.0"
KivyMD-Components = "^0.1.6"
"kivymd-extensions.akivymd" = "^1.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
